# ignite_rust_example

ignite_rs_v_0.1.0/: Cargo.toml
ignite_with_rest_api/: Cargo.toml  docker-compose.yaml  ignite-rest-config.xml
ignite_with_rest_api/src/: main.rs
src/: main.rs
