[package]
name = "ignite_with_rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = ["json"] } # HTTP client with JSON support
tokio = { version = "1", features = ["full"] }      # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization framework
serde_json = "1.0"    
anyhow = "1.0" # For simplified error handling
urlencoding = "2.1" # To URL-encode SQL queries